<resources>
    <!--String de la APP-->
    <string name="app_name">Diablo RIP</string>
    <string name="title_activity_main2">Diablo RIP</string>


    <!--String del POPUP-->
    <string name="popup_title">Registra un Objeto</string>
    <string name="hint_object">Nombre objeto</string>
    <string name="hint_description">Descripcion</string>
    <string name="save">Save</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <!--String del registro-->
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">Diablo RIP</string>

    <!--String de las clases-->
    <string name="menuHome">Home</string>
    <string name="classBarbarian">Barbarian</string>
    <string name="classDemonhunter">Demon Hunter</string>
    <string name="classMonk">Monk</string>
    <string name="classNecromancer">Necromancer</string>
    <string name="classWizard">Wizard</string>
    <string name="classWitchDoctor">Witch Doctor</string>
    <string name="classCrusader">Crusader</string>
    <string name="customItems">Custom</string>



    <!--String de las clases-->
    <string name="followerTemplar">Templar</string>
    <string name="followerScoundrel">Scoundrel</string>
    <string name="followerEnchantress">Enchantress</string>
    <string name="textoTemplar">Kormac, the Templar, a dedicated master of melee arms and armor.</string>
    <string name="textoScoundrel">Lyndon, the Scoundrel, a selfish rake skilled in larceny and ranged weapons. </string>
    <string name="textoEnchantress">Eirena, the Enchantress, a mysterious magic-user who can confuse and debilitate enemies. </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
