<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/homeicon"
            android:title="@string/menuHome" />
        <item
            android:id="@+id/nav_barbarian"
            android:icon="@drawable/escudob"
            android:title="@string/classBarbarian" />
        <item
            android:id="@+id/nav_demonhunter"
            android:icon="@drawable/escudodemonhunter"
            android:title="@string/classDemonhunter" />
        <item
            android:id="@+id/nav_monk"
            android:icon="@drawable/escudomonk"
            android:title="@string/classMonk" />
        <item
            android:id="@+id/nav_necromancer"
            android:icon="@drawable/escudonecro"
            android:title="@string/classNecromancer" />
        <item
            android:id="@+id/nav_wizard"
            android:icon="@drawable/escudow"
            android:title="@string/classWizard" />
        <item
            android:id="@+id/nav_witchdoctor"
            android:icon="@drawable/escudowd"
            android:title="@string/classWitchDoctor" />
        <item
            android:id="@+id/nav_crusader"
            android:icon="@drawable/escudocrusader"
            android:title="@string/classCrusader" />
        <item
            android:id="@+id/nav_personalizado"
            android:icon="@drawable/armas"
            android:title="@string/customItems" />
    </group>


</menu>
