<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="25dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/popup_title"
        android:id="@+id/popupTitleID"
        android:textSize="20dp"
        android:paddingBottom="20dp"
        android:textStyle="bold">

    </TextView>

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/popupTitleID"
        android:id="@+id/popupItemName"
        android:hint="@string/hint_object">

    </EditText>

    <EditText
        android:id="@+id/popupItemDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/popupItemName"
        android:layout_marginTop="14dp"
        android:hint="@string/hint_description"
        android:inputType="textVisiblePassword">

    </EditText>

    <ImageView
        android:id="@+id/iconPreview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/popupItemName"
        android:layout_alignParentTop="true"
        android:layout_marginStart="3dp"
        android:layout_marginTop="185dp"
        android:background="@drawable/armas" />

    <EditText
        android:id="@+id/urlimagen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/iconPreview"
        android:hint="URL de la imagen" />


    <Button
        android:id="@+id/popupSaveItemButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iconPreview"
        android:layout_alignStart="@+id/popupItemDescription"
        android:layout_marginStart="0dp"
        android:layout_marginTop="22dp"
        android:background="@color/colorPrimary"
        android:text="@string/save"
        android:textColor="@android:color/white">


    </Button>




</RelativeLayout>